# SkyLyzer

./: .gitignore~  LICENSE  README.md
CPP_include_list/: headersOpencv.h
Scripts/File_rename/: file_rename_script.sh
Scripts/Img_list_script/: scan_jpg_images.sh
Scripts/cmake/: CMakeLists.txt
Scripts/open_cv_install_script/: opencv.sh~
Scripts/opencv_cpp_c_compile_script/: compile_opencv.sh
Stitchin_program/: stitching_program.cpp
Stitchin_program/Test_new/: test1.cpp
Stitchin_program/krv/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp  main.cpp~  main2  main2.cpp
Stitchin_program/krv/Samples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image_list.txt  scan_jpg_images.sh  stitching_detailed
Stitchin_program/krv/Sasitha/: CMakeCache.txt  Makefile  cmake_install.cmake  opencv_example
Stitchin_program/krv/libs/: crop.cpp  crop.hpp  cropping.cpp
Stitchin_program/opecvtest/: main.cpp
Stitchin_program/opecvtest/Release/: .fuse_hidden0000007900000001  makefile  objects.mk  opecvtest  subdir.mk
finalToutch/: main_real  main_real.cpp
